parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CHAR
    COMA
    COMILLAS_S
    FALSE
    RETURN
    TRUE

Grammar

Rule 0     S' -> program
Rule 1     program -> lista_sentencias
Rule 2     lista_sentencias -> lista_sentencias sentencia
Rule 3     lista_sentencias -> sentencia
Rule 4     sentencia -> INT ID PUNTO_COMA
Rule 5     sentencia -> FLOAT ID PUNTO_COMA
Rule 6     sentencia -> BOOL ID PUNTO_COMA
Rule 7     sentencia -> STRING ID PUNTO_COMA
Rule 8     sentencia -> INT ID ASIGNACION expr PUNTO_COMA
Rule 9     sentencia -> FLOAT ID ASIGNACION expr PUNTO_COMA
Rule 10    sentencia -> BOOL ID ASIGNACION expr PUNTO_COMA
Rule 11    sentencia -> STRING ID ASIGNACION expr PUNTO_COMA
Rule 12    sentencia -> ID ASIGNACION expr PUNTO_COMA
Rule 13    sentencia -> IF IZQ_PAREN expr DER_PAREN sentencia
Rule 14    sentencia -> IF IZQ_PAREN expr DER_PAREN sentencia ELSE sentencia
Rule 15    sentencia -> WHILE IZQ_PAREN expr DER_PAREN sentencia
Rule 16    sentencia -> IZQ_BRACE lista_sentencias DER_BRACE
Rule 17    expr -> expr SUMA expr
Rule 18    expr -> expr RESTA expr
Rule 19    expr -> expr MULT expr
Rule 20    expr -> expr DIV expr
Rule 21    expr -> expr MOD expr
Rule 22    expr -> expr EQ expr
Rule 23    expr -> expr NEQ expr
Rule 24    expr -> expr LT expr
Rule 25    expr -> expr GT expr
Rule 26    expr -> expr LE expr
Rule 27    expr -> expr GE expr
Rule 28    expr -> expr AND expr
Rule 29    expr -> expr OR expr
Rule 30    expr -> NOT expr
Rule 31    expr -> IZQ_PAREN expr DER_PAREN
Rule 32    expr -> INT_CONST
Rule 33    expr -> FLOAT_CONST
Rule 34    expr -> BOOL_CONST
Rule 35    expr -> STRING_CONST
Rule 36    expr -> ID

Terminals, with rules where they appear

AND                  : 28
ASIGNACION           : 8 9 10 11 12
BOOL                 : 6 10
BOOL_CONST           : 34
CHAR                 : 
COMA                 : 
COMILLAS_S           : 
DER_BRACE            : 16
DER_PAREN            : 13 14 15 31
DIV                  : 20
ELSE                 : 14
EQ                   : 22
FALSE                : 
FLOAT                : 5 9
FLOAT_CONST          : 33
GE                   : 27
GT                   : 25
ID                   : 4 5 6 7 8 9 10 11 12 36
IF                   : 13 14
INT                  : 4 8
INT_CONST            : 32
IZQ_BRACE            : 16
IZQ_PAREN            : 13 14 15 31
LE                   : 26
LT                   : 24
MOD                  : 21
MULT                 : 19
NEQ                  : 23
NOT                  : 30
OR                   : 29
PUNTO_COMA           : 4 5 6 7 8 9 10 11 12
RESTA                : 18
RETURN               : 
STRING               : 7 11
STRING_CONST         : 35
SUMA                 : 17
TRUE                 : 
WHILE                : 15
error                : 

Nonterminals, with rules where they appear

expr                 : 8 9 10 11 12 13 14 15 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 31
lista_sentencias     : 1 2 16
program              : 0
sentencia            : 2 3 13 14 14 15

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . lista_sentencias
    (2) lista_sentencias -> . lista_sentencias sentencia
    (3) lista_sentencias -> . sentencia
    (4) sentencia -> . INT ID PUNTO_COMA
    (5) sentencia -> . FLOAT ID PUNTO_COMA
    (6) sentencia -> . BOOL ID PUNTO_COMA
    (7) sentencia -> . STRING ID PUNTO_COMA
    (8) sentencia -> . INT ID ASIGNACION expr PUNTO_COMA
    (9) sentencia -> . FLOAT ID ASIGNACION expr PUNTO_COMA
    (10) sentencia -> . BOOL ID ASIGNACION expr PUNTO_COMA
    (11) sentencia -> . STRING ID ASIGNACION expr PUNTO_COMA
    (12) sentencia -> . ID ASIGNACION expr PUNTO_COMA
    (13) sentencia -> . IF IZQ_PAREN expr DER_PAREN sentencia
    (14) sentencia -> . IF IZQ_PAREN expr DER_PAREN sentencia ELSE sentencia
    (15) sentencia -> . WHILE IZQ_PAREN expr DER_PAREN sentencia
    (16) sentencia -> . IZQ_BRACE lista_sentencias DER_BRACE

    INT             shift and go to state 4
    FLOAT           shift and go to state 6
    BOOL            shift and go to state 7
    STRING          shift and go to state 8
    ID              shift and go to state 5
    IF              shift and go to state 9
    WHILE           shift and go to state 10
    IZQ_BRACE       shift and go to state 11

    program                        shift and go to state 1
    lista_sentencias               shift and go to state 2
    sentencia                      shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> lista_sentencias .
    (2) lista_sentencias -> lista_sentencias . sentencia
    (4) sentencia -> . INT ID PUNTO_COMA
    (5) sentencia -> . FLOAT ID PUNTO_COMA
    (6) sentencia -> . BOOL ID PUNTO_COMA
    (7) sentencia -> . STRING ID PUNTO_COMA
    (8) sentencia -> . INT ID ASIGNACION expr PUNTO_COMA
    (9) sentencia -> . FLOAT ID ASIGNACION expr PUNTO_COMA
    (10) sentencia -> . BOOL ID ASIGNACION expr PUNTO_COMA
    (11) sentencia -> . STRING ID ASIGNACION expr PUNTO_COMA
    (12) sentencia -> . ID ASIGNACION expr PUNTO_COMA
    (13) sentencia -> . IF IZQ_PAREN expr DER_PAREN sentencia
    (14) sentencia -> . IF IZQ_PAREN expr DER_PAREN sentencia ELSE sentencia
    (15) sentencia -> . WHILE IZQ_PAREN expr DER_PAREN sentencia
    (16) sentencia -> . IZQ_BRACE lista_sentencias DER_BRACE

    $end            reduce using rule 1 (program -> lista_sentencias .)
    INT             shift and go to state 4
    FLOAT           shift and go to state 6
    BOOL            shift and go to state 7
    STRING          shift and go to state 8
    ID              shift and go to state 5
    IF              shift and go to state 9
    WHILE           shift and go to state 10
    IZQ_BRACE       shift and go to state 11

    sentencia                      shift and go to state 12

state 3

    (3) lista_sentencias -> sentencia .

    INT             reduce using rule 3 (lista_sentencias -> sentencia .)
    FLOAT           reduce using rule 3 (lista_sentencias -> sentencia .)
    BOOL            reduce using rule 3 (lista_sentencias -> sentencia .)
    STRING          reduce using rule 3 (lista_sentencias -> sentencia .)
    ID              reduce using rule 3 (lista_sentencias -> sentencia .)
    IF              reduce using rule 3 (lista_sentencias -> sentencia .)
    WHILE           reduce using rule 3 (lista_sentencias -> sentencia .)
    IZQ_BRACE       reduce using rule 3 (lista_sentencias -> sentencia .)
    $end            reduce using rule 3 (lista_sentencias -> sentencia .)
    DER_BRACE       reduce using rule 3 (lista_sentencias -> sentencia .)


state 4

    (4) sentencia -> INT . ID PUNTO_COMA
    (8) sentencia -> INT . ID ASIGNACION expr PUNTO_COMA

    ID              shift and go to state 13


state 5

    (12) sentencia -> ID . ASIGNACION expr PUNTO_COMA

    ASIGNACION      shift and go to state 14


state 6

    (5) sentencia -> FLOAT . ID PUNTO_COMA
    (9) sentencia -> FLOAT . ID ASIGNACION expr PUNTO_COMA

    ID              shift and go to state 15


state 7

    (6) sentencia -> BOOL . ID PUNTO_COMA
    (10) sentencia -> BOOL . ID ASIGNACION expr PUNTO_COMA

    ID              shift and go to state 16


state 8

    (7) sentencia -> STRING . ID PUNTO_COMA
    (11) sentencia -> STRING . ID ASIGNACION expr PUNTO_COMA

    ID              shift and go to state 17


state 9

    (13) sentencia -> IF . IZQ_PAREN expr DER_PAREN sentencia
    (14) sentencia -> IF . IZQ_PAREN expr DER_PAREN sentencia ELSE sentencia

    IZQ_PAREN       shift and go to state 18


state 10

    (15) sentencia -> WHILE . IZQ_PAREN expr DER_PAREN sentencia

    IZQ_PAREN       shift and go to state 19


state 11

    (16) sentencia -> IZQ_BRACE . lista_sentencias DER_BRACE
    (2) lista_sentencias -> . lista_sentencias sentencia
    (3) lista_sentencias -> . sentencia
    (4) sentencia -> . INT ID PUNTO_COMA
    (5) sentencia -> . FLOAT ID PUNTO_COMA
    (6) sentencia -> . BOOL ID PUNTO_COMA
    (7) sentencia -> . STRING ID PUNTO_COMA
    (8) sentencia -> . INT ID ASIGNACION expr PUNTO_COMA
    (9) sentencia -> . FLOAT ID ASIGNACION expr PUNTO_COMA
    (10) sentencia -> . BOOL ID ASIGNACION expr PUNTO_COMA
    (11) sentencia -> . STRING ID ASIGNACION expr PUNTO_COMA
    (12) sentencia -> . ID ASIGNACION expr PUNTO_COMA
    (13) sentencia -> . IF IZQ_PAREN expr DER_PAREN sentencia
    (14) sentencia -> . IF IZQ_PAREN expr DER_PAREN sentencia ELSE sentencia
    (15) sentencia -> . WHILE IZQ_PAREN expr DER_PAREN sentencia
    (16) sentencia -> . IZQ_BRACE lista_sentencias DER_BRACE

    INT             shift and go to state 4
    FLOAT           shift and go to state 6
    BOOL            shift and go to state 7
    STRING          shift and go to state 8
    ID              shift and go to state 5
    IF              shift and go to state 9
    WHILE           shift and go to state 10
    IZQ_BRACE       shift and go to state 11

    lista_sentencias               shift and go to state 20
    sentencia                      shift and go to state 3

state 12

    (2) lista_sentencias -> lista_sentencias sentencia .

    INT             reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    FLOAT           reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    BOOL            reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    STRING          reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    ID              reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    IF              reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    WHILE           reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    IZQ_BRACE       reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    $end            reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    DER_BRACE       reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)


state 13

    (4) sentencia -> INT ID . PUNTO_COMA
    (8) sentencia -> INT ID . ASIGNACION expr PUNTO_COMA

    PUNTO_COMA      shift and go to state 21
    ASIGNACION      shift and go to state 22


state 14

    (12) sentencia -> ID ASIGNACION . expr PUNTO_COMA
    (17) expr -> . expr SUMA expr
    (18) expr -> . expr RESTA expr
    (19) expr -> . expr MULT expr
    (20) expr -> . expr DIV expr
    (21) expr -> . expr MOD expr
    (22) expr -> . expr EQ expr
    (23) expr -> . expr NEQ expr
    (24) expr -> . expr LT expr
    (25) expr -> . expr GT expr
    (26) expr -> . expr LE expr
    (27) expr -> . expr GE expr
    (28) expr -> . expr AND expr
    (29) expr -> . expr OR expr
    (30) expr -> . NOT expr
    (31) expr -> . IZQ_PAREN expr DER_PAREN
    (32) expr -> . INT_CONST
    (33) expr -> . FLOAT_CONST
    (34) expr -> . BOOL_CONST
    (35) expr -> . STRING_CONST
    (36) expr -> . ID

    NOT             shift and go to state 25
    IZQ_PAREN       shift and go to state 26
    INT_CONST       shift and go to state 27
    FLOAT_CONST     shift and go to state 28
    BOOL_CONST      shift and go to state 29
    STRING_CONST    shift and go to state 30
    ID              shift and go to state 23

    expr                           shift and go to state 24

state 15

    (5) sentencia -> FLOAT ID . PUNTO_COMA
    (9) sentencia -> FLOAT ID . ASIGNACION expr PUNTO_COMA

    PUNTO_COMA      shift and go to state 31
    ASIGNACION      shift and go to state 32


state 16

    (6) sentencia -> BOOL ID . PUNTO_COMA
    (10) sentencia -> BOOL ID . ASIGNACION expr PUNTO_COMA

    PUNTO_COMA      shift and go to state 33
    ASIGNACION      shift and go to state 34


state 17

    (7) sentencia -> STRING ID . PUNTO_COMA
    (11) sentencia -> STRING ID . ASIGNACION expr PUNTO_COMA

    PUNTO_COMA      shift and go to state 35
    ASIGNACION      shift and go to state 36


state 18

    (13) sentencia -> IF IZQ_PAREN . expr DER_PAREN sentencia
    (14) sentencia -> IF IZQ_PAREN . expr DER_PAREN sentencia ELSE sentencia
    (17) expr -> . expr SUMA expr
    (18) expr -> . expr RESTA expr
    (19) expr -> . expr MULT expr
    (20) expr -> . expr DIV expr
    (21) expr -> . expr MOD expr
    (22) expr -> . expr EQ expr
    (23) expr -> . expr NEQ expr
    (24) expr -> . expr LT expr
    (25) expr -> . expr GT expr
    (26) expr -> . expr LE expr
    (27) expr -> . expr GE expr
    (28) expr -> . expr AND expr
    (29) expr -> . expr OR expr
    (30) expr -> . NOT expr
    (31) expr -> . IZQ_PAREN expr DER_PAREN
    (32) expr -> . INT_CONST
    (33) expr -> . FLOAT_CONST
    (34) expr -> . BOOL_CONST
    (35) expr -> . STRING_CONST
    (36) expr -> . ID

    NOT             shift and go to state 25
    IZQ_PAREN       shift and go to state 26
    INT_CONST       shift and go to state 27
    FLOAT_CONST     shift and go to state 28
    BOOL_CONST      shift and go to state 29
    STRING_CONST    shift and go to state 30
    ID              shift and go to state 23

    expr                           shift and go to state 37

state 19

    (15) sentencia -> WHILE IZQ_PAREN . expr DER_PAREN sentencia
    (17) expr -> . expr SUMA expr
    (18) expr -> . expr RESTA expr
    (19) expr -> . expr MULT expr
    (20) expr -> . expr DIV expr
    (21) expr -> . expr MOD expr
    (22) expr -> . expr EQ expr
    (23) expr -> . expr NEQ expr
    (24) expr -> . expr LT expr
    (25) expr -> . expr GT expr
    (26) expr -> . expr LE expr
    (27) expr -> . expr GE expr
    (28) expr -> . expr AND expr
    (29) expr -> . expr OR expr
    (30) expr -> . NOT expr
    (31) expr -> . IZQ_PAREN expr DER_PAREN
    (32) expr -> . INT_CONST
    (33) expr -> . FLOAT_CONST
    (34) expr -> . BOOL_CONST
    (35) expr -> . STRING_CONST
    (36) expr -> . ID

    NOT             shift and go to state 25
    IZQ_PAREN       shift and go to state 26
    INT_CONST       shift and go to state 27
    FLOAT_CONST     shift and go to state 28
    BOOL_CONST      shift and go to state 29
    STRING_CONST    shift and go to state 30
    ID              shift and go to state 23

    expr                           shift and go to state 38

state 20

    (16) sentencia -> IZQ_BRACE lista_sentencias . DER_BRACE
    (2) lista_sentencias -> lista_sentencias . sentencia
    (4) sentencia -> . INT ID PUNTO_COMA
    (5) sentencia -> . FLOAT ID PUNTO_COMA
    (6) sentencia -> . BOOL ID PUNTO_COMA
    (7) sentencia -> . STRING ID PUNTO_COMA
    (8) sentencia -> . INT ID ASIGNACION expr PUNTO_COMA
    (9) sentencia -> . FLOAT ID ASIGNACION expr PUNTO_COMA
    (10) sentencia -> . BOOL ID ASIGNACION expr PUNTO_COMA
    (11) sentencia -> . STRING ID ASIGNACION expr PUNTO_COMA
    (12) sentencia -> . ID ASIGNACION expr PUNTO_COMA
    (13) sentencia -> . IF IZQ_PAREN expr DER_PAREN sentencia
    (14) sentencia -> . IF IZQ_PAREN expr DER_PAREN sentencia ELSE sentencia
    (15) sentencia -> . WHILE IZQ_PAREN expr DER_PAREN sentencia
    (16) sentencia -> . IZQ_BRACE lista_sentencias DER_BRACE

    DER_BRACE       shift and go to state 39
    INT             shift and go to state 4
    FLOAT           shift and go to state 6
    BOOL            shift and go to state 7
    STRING          shift and go to state 8
    ID              shift and go to state 5
    IF              shift and go to state 9
    WHILE           shift and go to state 10
    IZQ_BRACE       shift and go to state 11

    sentencia                      shift and go to state 12

state 21

    (4) sentencia -> INT ID PUNTO_COMA .

    INT             reduce using rule 4 (sentencia -> INT ID PUNTO_COMA .)
    FLOAT           reduce using rule 4 (sentencia -> INT ID PUNTO_COMA .)
    BOOL            reduce using rule 4 (sentencia -> INT ID PUNTO_COMA .)
    STRING          reduce using rule 4 (sentencia -> INT ID PUNTO_COMA .)
    ID              reduce using rule 4 (sentencia -> INT ID PUNTO_COMA .)
    IF              reduce using rule 4 (sentencia -> INT ID PUNTO_COMA .)
    WHILE           reduce using rule 4 (sentencia -> INT ID PUNTO_COMA .)
    IZQ_BRACE       reduce using rule 4 (sentencia -> INT ID PUNTO_COMA .)
    $end            reduce using rule 4 (sentencia -> INT ID PUNTO_COMA .)
    DER_BRACE       reduce using rule 4 (sentencia -> INT ID PUNTO_COMA .)
    ELSE            reduce using rule 4 (sentencia -> INT ID PUNTO_COMA .)


state 22

    (8) sentencia -> INT ID ASIGNACION . expr PUNTO_COMA
    (17) expr -> . expr SUMA expr
    (18) expr -> . expr RESTA expr
    (19) expr -> . expr MULT expr
    (20) expr -> . expr DIV expr
    (21) expr -> . expr MOD expr
    (22) expr -> . expr EQ expr
    (23) expr -> . expr NEQ expr
    (24) expr -> . expr LT expr
    (25) expr -> . expr GT expr
    (26) expr -> . expr LE expr
    (27) expr -> . expr GE expr
    (28) expr -> . expr AND expr
    (29) expr -> . expr OR expr
    (30) expr -> . NOT expr
    (31) expr -> . IZQ_PAREN expr DER_PAREN
    (32) expr -> . INT_CONST
    (33) expr -> . FLOAT_CONST
    (34) expr -> . BOOL_CONST
    (35) expr -> . STRING_CONST
    (36) expr -> . ID

    NOT             shift and go to state 25
    IZQ_PAREN       shift and go to state 26
    INT_CONST       shift and go to state 27
    FLOAT_CONST     shift and go to state 28
    BOOL_CONST      shift and go to state 29
    STRING_CONST    shift and go to state 30
    ID              shift and go to state 23

    expr                           shift and go to state 40

state 23

    (36) expr -> ID .

    PUNTO_COMA      reduce using rule 36 (expr -> ID .)
    SUMA            reduce using rule 36 (expr -> ID .)
    RESTA           reduce using rule 36 (expr -> ID .)
    MULT            reduce using rule 36 (expr -> ID .)
    DIV             reduce using rule 36 (expr -> ID .)
    MOD             reduce using rule 36 (expr -> ID .)
    EQ              reduce using rule 36 (expr -> ID .)
    NEQ             reduce using rule 36 (expr -> ID .)
    LT              reduce using rule 36 (expr -> ID .)
    GT              reduce using rule 36 (expr -> ID .)
    LE              reduce using rule 36 (expr -> ID .)
    GE              reduce using rule 36 (expr -> ID .)
    AND             reduce using rule 36 (expr -> ID .)
    OR              reduce using rule 36 (expr -> ID .)
    DER_PAREN       reduce using rule 36 (expr -> ID .)


state 24

    (12) sentencia -> ID ASIGNACION expr . PUNTO_COMA
    (17) expr -> expr . SUMA expr
    (18) expr -> expr . RESTA expr
    (19) expr -> expr . MULT expr
    (20) expr -> expr . DIV expr
    (21) expr -> expr . MOD expr
    (22) expr -> expr . EQ expr
    (23) expr -> expr . NEQ expr
    (24) expr -> expr . LT expr
    (25) expr -> expr . GT expr
    (26) expr -> expr . LE expr
    (27) expr -> expr . GE expr
    (28) expr -> expr . AND expr
    (29) expr -> expr . OR expr

    PUNTO_COMA      shift and go to state 41
    SUMA            shift and go to state 42
    RESTA           shift and go to state 43
    MULT            shift and go to state 44
    DIV             shift and go to state 45
    MOD             shift and go to state 46
    EQ              shift and go to state 47
    NEQ             shift and go to state 48
    LT              shift and go to state 49
    GT              shift and go to state 50
    LE              shift and go to state 51
    GE              shift and go to state 52
    AND             shift and go to state 53
    OR              shift and go to state 54


state 25

    (30) expr -> NOT . expr
    (17) expr -> . expr SUMA expr
    (18) expr -> . expr RESTA expr
    (19) expr -> . expr MULT expr
    (20) expr -> . expr DIV expr
    (21) expr -> . expr MOD expr
    (22) expr -> . expr EQ expr
    (23) expr -> . expr NEQ expr
    (24) expr -> . expr LT expr
    (25) expr -> . expr GT expr
    (26) expr -> . expr LE expr
    (27) expr -> . expr GE expr
    (28) expr -> . expr AND expr
    (29) expr -> . expr OR expr
    (30) expr -> . NOT expr
    (31) expr -> . IZQ_PAREN expr DER_PAREN
    (32) expr -> . INT_CONST
    (33) expr -> . FLOAT_CONST
    (34) expr -> . BOOL_CONST
    (35) expr -> . STRING_CONST
    (36) expr -> . ID

    NOT             shift and go to state 25
    IZQ_PAREN       shift and go to state 26
    INT_CONST       shift and go to state 27
    FLOAT_CONST     shift and go to state 28
    BOOL_CONST      shift and go to state 29
    STRING_CONST    shift and go to state 30
    ID              shift and go to state 23

    expr                           shift and go to state 55

state 26

    (31) expr -> IZQ_PAREN . expr DER_PAREN
    (17) expr -> . expr SUMA expr
    (18) expr -> . expr RESTA expr
    (19) expr -> . expr MULT expr
    (20) expr -> . expr DIV expr
    (21) expr -> . expr MOD expr
    (22) expr -> . expr EQ expr
    (23) expr -> . expr NEQ expr
    (24) expr -> . expr LT expr
    (25) expr -> . expr GT expr
    (26) expr -> . expr LE expr
    (27) expr -> . expr GE expr
    (28) expr -> . expr AND expr
    (29) expr -> . expr OR expr
    (30) expr -> . NOT expr
    (31) expr -> . IZQ_PAREN expr DER_PAREN
    (32) expr -> . INT_CONST
    (33) expr -> . FLOAT_CONST
    (34) expr -> . BOOL_CONST
    (35) expr -> . STRING_CONST
    (36) expr -> . ID

    NOT             shift and go to state 25
    IZQ_PAREN       shift and go to state 26
    INT_CONST       shift and go to state 27
    FLOAT_CONST     shift and go to state 28
    BOOL_CONST      shift and go to state 29
    STRING_CONST    shift and go to state 30
    ID              shift and go to state 23

    expr                           shift and go to state 56

state 27

    (32) expr -> INT_CONST .

    PUNTO_COMA      reduce using rule 32 (expr -> INT_CONST .)
    SUMA            reduce using rule 32 (expr -> INT_CONST .)
    RESTA           reduce using rule 32 (expr -> INT_CONST .)
    MULT            reduce using rule 32 (expr -> INT_CONST .)
    DIV             reduce using rule 32 (expr -> INT_CONST .)
    MOD             reduce using rule 32 (expr -> INT_CONST .)
    EQ              reduce using rule 32 (expr -> INT_CONST .)
    NEQ             reduce using rule 32 (expr -> INT_CONST .)
    LT              reduce using rule 32 (expr -> INT_CONST .)
    GT              reduce using rule 32 (expr -> INT_CONST .)
    LE              reduce using rule 32 (expr -> INT_CONST .)
    GE              reduce using rule 32 (expr -> INT_CONST .)
    AND             reduce using rule 32 (expr -> INT_CONST .)
    OR              reduce using rule 32 (expr -> INT_CONST .)
    DER_PAREN       reduce using rule 32 (expr -> INT_CONST .)


state 28

    (33) expr -> FLOAT_CONST .

    PUNTO_COMA      reduce using rule 33 (expr -> FLOAT_CONST .)
    SUMA            reduce using rule 33 (expr -> FLOAT_CONST .)
    RESTA           reduce using rule 33 (expr -> FLOAT_CONST .)
    MULT            reduce using rule 33 (expr -> FLOAT_CONST .)
    DIV             reduce using rule 33 (expr -> FLOAT_CONST .)
    MOD             reduce using rule 33 (expr -> FLOAT_CONST .)
    EQ              reduce using rule 33 (expr -> FLOAT_CONST .)
    NEQ             reduce using rule 33 (expr -> FLOAT_CONST .)
    LT              reduce using rule 33 (expr -> FLOAT_CONST .)
    GT              reduce using rule 33 (expr -> FLOAT_CONST .)
    LE              reduce using rule 33 (expr -> FLOAT_CONST .)
    GE              reduce using rule 33 (expr -> FLOAT_CONST .)
    AND             reduce using rule 33 (expr -> FLOAT_CONST .)
    OR              reduce using rule 33 (expr -> FLOAT_CONST .)
    DER_PAREN       reduce using rule 33 (expr -> FLOAT_CONST .)


state 29

    (34) expr -> BOOL_CONST .

    PUNTO_COMA      reduce using rule 34 (expr -> BOOL_CONST .)
    SUMA            reduce using rule 34 (expr -> BOOL_CONST .)
    RESTA           reduce using rule 34 (expr -> BOOL_CONST .)
    MULT            reduce using rule 34 (expr -> BOOL_CONST .)
    DIV             reduce using rule 34 (expr -> BOOL_CONST .)
    MOD             reduce using rule 34 (expr -> BOOL_CONST .)
    EQ              reduce using rule 34 (expr -> BOOL_CONST .)
    NEQ             reduce using rule 34 (expr -> BOOL_CONST .)
    LT              reduce using rule 34 (expr -> BOOL_CONST .)
    GT              reduce using rule 34 (expr -> BOOL_CONST .)
    LE              reduce using rule 34 (expr -> BOOL_CONST .)
    GE              reduce using rule 34 (expr -> BOOL_CONST .)
    AND             reduce using rule 34 (expr -> BOOL_CONST .)
    OR              reduce using rule 34 (expr -> BOOL_CONST .)
    DER_PAREN       reduce using rule 34 (expr -> BOOL_CONST .)


state 30

    (35) expr -> STRING_CONST .

    PUNTO_COMA      reduce using rule 35 (expr -> STRING_CONST .)
    SUMA            reduce using rule 35 (expr -> STRING_CONST .)
    RESTA           reduce using rule 35 (expr -> STRING_CONST .)
    MULT            reduce using rule 35 (expr -> STRING_CONST .)
    DIV             reduce using rule 35 (expr -> STRING_CONST .)
    MOD             reduce using rule 35 (expr -> STRING_CONST .)
    EQ              reduce using rule 35 (expr -> STRING_CONST .)
    NEQ             reduce using rule 35 (expr -> STRING_CONST .)
    LT              reduce using rule 35 (expr -> STRING_CONST .)
    GT              reduce using rule 35 (expr -> STRING_CONST .)
    LE              reduce using rule 35 (expr -> STRING_CONST .)
    GE              reduce using rule 35 (expr -> STRING_CONST .)
    AND             reduce using rule 35 (expr -> STRING_CONST .)
    OR              reduce using rule 35 (expr -> STRING_CONST .)
    DER_PAREN       reduce using rule 35 (expr -> STRING_CONST .)


state 31

    (5) sentencia -> FLOAT ID PUNTO_COMA .

    INT             reduce using rule 5 (sentencia -> FLOAT ID PUNTO_COMA .)
    FLOAT           reduce using rule 5 (sentencia -> FLOAT ID PUNTO_COMA .)
    BOOL            reduce using rule 5 (sentencia -> FLOAT ID PUNTO_COMA .)
    STRING          reduce using rule 5 (sentencia -> FLOAT ID PUNTO_COMA .)
    ID              reduce using rule 5 (sentencia -> FLOAT ID PUNTO_COMA .)
    IF              reduce using rule 5 (sentencia -> FLOAT ID PUNTO_COMA .)
    WHILE           reduce using rule 5 (sentencia -> FLOAT ID PUNTO_COMA .)
    IZQ_BRACE       reduce using rule 5 (sentencia -> FLOAT ID PUNTO_COMA .)
    $end            reduce using rule 5 (sentencia -> FLOAT ID PUNTO_COMA .)
    DER_BRACE       reduce using rule 5 (sentencia -> FLOAT ID PUNTO_COMA .)
    ELSE            reduce using rule 5 (sentencia -> FLOAT ID PUNTO_COMA .)


state 32

    (9) sentencia -> FLOAT ID ASIGNACION . expr PUNTO_COMA
    (17) expr -> . expr SUMA expr
    (18) expr -> . expr RESTA expr
    (19) expr -> . expr MULT expr
    (20) expr -> . expr DIV expr
    (21) expr -> . expr MOD expr
    (22) expr -> . expr EQ expr
    (23) expr -> . expr NEQ expr
    (24) expr -> . expr LT expr
    (25) expr -> . expr GT expr
    (26) expr -> . expr LE expr
    (27) expr -> . expr GE expr
    (28) expr -> . expr AND expr
    (29) expr -> . expr OR expr
    (30) expr -> . NOT expr
    (31) expr -> . IZQ_PAREN expr DER_PAREN
    (32) expr -> . INT_CONST
    (33) expr -> . FLOAT_CONST
    (34) expr -> . BOOL_CONST
    (35) expr -> . STRING_CONST
    (36) expr -> . ID

    NOT             shift and go to state 25
    IZQ_PAREN       shift and go to state 26
    INT_CONST       shift and go to state 27
    FLOAT_CONST     shift and go to state 28
    BOOL_CONST      shift and go to state 29
    STRING_CONST    shift and go to state 30
    ID              shift and go to state 23
